--- a/examples/react-slate/package.json
+++ b/examples/react-slate/package.json
@@ -4,7 +4,7 @@
   "description": "Example integration for @grammarly/react-slate",
   "main": "src/index.js",
   "dependencies": {
-    "@grammarly/react-slate": "^0.10.18",
+    "@grammarly/react-slate": "latest",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-scripts": "3.4.3",
