--- a/examples/vue-textarea/package.json
+++ b/examples/vue-textarea/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@grammarly/vue-textarea": "^0.10.18",
+    "@grammarly/vue-textarea": "latest",
     "@vue/cli-plugin-babel": "4.1.1",
     "vue": "^2.6.11"
   },
