--- a/examples/react-textarea/package.json
+++ b/examples/react-textarea/package.json
@@ -4,7 +4,7 @@
   "description": "Example integration for @grammarly/react-textarea",
   "main": "src/index.js",
   "dependencies": {
-    "@grammarly/react-textarea": "latest",
+    "@grammarly/react-textarea": "*",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-scripts": "3.4.3"
