chore: add editor-sdk example

--- a/examples/editor-sdk-react/package.json
+++ b/examples/editor-sdk-react/package.json
@@ -4,7 +4,7 @@
   "description": "Example integration for @grammarly/editor-sdk-react",
   "main": "src/index.js",
   "dependencies": {
-    "@grammarly/editor-sdk-react": "*",
+    "@grammarly/editor-sdk-react": "latest",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-scripts": "3.4.3"
