--- a/examples/editor-sdk-vue/package.json
+++ b/examples/editor-sdk-vue/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "grammarly-example-vue-input",
+  "name": "grammarly-example-editor-sdk-vue",
   "version": "1.0.0",
-  "description": "Example integration for @grammarly/vue-textarea",
+  "description": "Example integration for @grammarly/editor-sdk-react",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
